--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- Primary Meta Tags -->
     <title>K-RIte</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <meta name="title" content="Truck Parking Made Hassle-Free." />
+    <meta name="title" content="K-Rite Assignment" />
     <meta
       name="description"
       content="K-Rite provides trusted, highly secure truck parking for drivers and driver-owners needing a safe, reliable space for their vehicle in New Jersey."
@@ -16,7 +16,7 @@
       property="og:url"
       content="https://65f1ee24951afe0e3f0878c7--tubular-mochi-f428b1.netlify.app/"
     />
-    <meta property="og:title" content="Truck Parking Made Hassle-Free." />
+    <meta property="og:title" content="K-Rite Assignment" />
     <meta
       property="og:description"
       content="K-Rite provides trusted, highly secure truck parking for drivers and driver-owners needing a safe, reliable space for their vehicle in New Jersey."
@@ -32,7 +32,7 @@
       property="twitter:url"
       content="https://65f1ee24951afe0e3f0878c7--tubular-mochi-f428b1.netlify.app/"
     />
-    <meta property="twitter:title" content="Truck Parking Made Hassle-Free." />
+    <meta property="twitter:title" content="K-Rite Assignment" />
     <meta
       property="twitter:description"
       content="K-Rite provides trusted, highly secure truck parking for drivers and driver-owners needing a safe, reliable space for their vehicle in New Jersey."
